gitops/platform-apps/coder/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coder
  labels:
    app.kubernetes.io/name: coder
